<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_proposition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proposition" />

    <TextView
        android:id="@+id/form_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formation_recherch_e" />

    <TextView
        android:id="@+id/prop_descript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supprimer" />
</LinearLayout>